--- a/App.css
+++ b/App.css
@@ -5,12 +5,9 @@ body {
 
 /** @format */
 header {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[8];
-      grid-template-columns: repeat(8, 1fr);
-  -ms-grid-rows: 2em 16em 2em 2em;
-      grid-template-rows: 2em 16em 2em 2em;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: 2em 16em 2em 2em;
   max-width: 100%;
   row-gap: 10px;
   text-align: center;
@@ -19,52 +16,67 @@ header {
 
 header img {
   max-width: 28em;
-  -ms-grid-row: 2;
   grid-row: 2;
   margin-top: -4em;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 8;
   grid-column: 1/9;
   margin-right: auto;
   margin-left: auto;
 }
 
 header #NavFormItem {
-  -ms-grid-row: 4;
   grid-row: 4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 8;
   grid-column: 1/9;
   margin-right: auto;
   margin-left: auto;
 }
 
 header #NavInicio {
-  -ms-grid-row: 3;
   grid-row: 3;
-  -ms-grid-column: 3;
   grid-column: 3;
 }
 
 header #NavPopulares {
-  -ms-grid-row: 3;
   grid-row: 3;
-  -ms-grid-column: 4;
   grid-column: 4;
 }
 
 header #NavLogin {
-  -ms-grid-row: 3;
   grid-row: 3;
-  -ms-grid-column: 5;
   grid-column: 5;
 }
 
 header #NavCreate {
-  -ms-grid-row: 3;
   grid-row: 3;
-  -ms-grid-column: 6;
   grid-column: 6;
+}
+
+@media (max-width: 425px) {
+  header {
+    grid-template-rows: 2em 16em 2em 2em 2em;
+  }
+  header img {
+    max-width: 21em;
+    margin-top: -1em;
+  }
+  header #NavInicio {
+    grid-row: 3;
+    grid-column: 1/3;
+  }
+  header #NavFormItem {
+    grid-row: 5;
+  }
+  header #NavPopulares {
+    grid-row: 3;
+    grid-column: 3/6;
+  }
+  header #NavLogin {
+    grid-row: 3;
+    grid-column: 6/9;
+  }
+  header #NavCreate {
+    grid-row: 4;
+    grid-column: 1/9;
+  }
 }
 
 /** @format */
@@ -84,13 +96,95 @@ header #NavCreate {
 }
 
 main {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  -webkit-column-gap: 12px;
-          column-gap: 12px;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 12px;
   max-width: 95%;
   margin: 0 auto;
+}
+
+@media (max-width: 425px) {
+  main {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  main .MuiTypography-displayBlock {
+    font-size: 20px;
+    font-family: 'kg_what_a_timeregular';
+  }
+  main .MuiTypography-body2 {
+    font-size: 16px;
+  }
+  main .MuiTypography-body1 {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+  main {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  main {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+main .ItemIngredientes {
+  font-size: 17px;
+}
+
+main .MuiTypography-paragraph {
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
+main .YoutubeIcon {
+  color: #f44336;
+}
+
+main .YoutubeIcon .MuiSvgIcon-root {
+  width: 2.5em;
+  height: 2.5em;
+}
+
+main .MuiSvgIcon-root {
+  width: 1.5em;
+  height: 1.5em;
+}
+
+main .ConteinerFrame {
+  display: grid;
+}
+
+main .ConteinerFrame .iframewatch {
+  width: 330px;
+  height: 200px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  text-align: center;
+}
+
+footer ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #ffe0b24f;
+  box-shadow: -1px 6px 13px 0px black;
+}
+
+footer ul li img {
+  margin: 15px 0px 15px 0px;
+  max-width: 40px;
+}
+
+footer div {
+  background-color: #f4b61a;
+  color: #fff;
+  box-shadow: -1px 4px 9px 1px black;
 }
 /*# sourceMappingURL=App.css.map */
